fixed the issues with the li spacing

--- a/app/assets/stylesheets/components/_navbar_user.scss
+++ b/app/assets/stylesheets/components/_navbar_user.scss
@@ -57,10 +57,10 @@
   }
 }
 
-ul.navbar-nav.mr-auto.navbar-mobile-flex>* {
+ul.navbar-nav.mr-auto.navbar-mobile-flex > * {
   @media (max-width: 428px) {
-    margin-top: 4.5em !important;
-    margin-bottom: 1em !important;
+    margin-top: 5.5vh !important;
+    margin-bottom: 5.5vh !important;
   }
 }
 
